--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
       </div> 
     </header>
-    </div class="container-1">
+    <div class="container-1">
       <div class="top__left">
         <span class="font-size">Множество ресторанов в городе
         <br>предоставляют скидки, мы поможем вам
