--- a/index.html
+++ b/index.html
@@ -17,72 +17,102 @@
         </div>
       </div> 
     </header>
-    <div class="container-1">
-      <div class="top__left">
-        <span class="font-size">Множество ресторанов в городе
-        <br>предоставляют скидки, мы поможем вам
-        <br><b><span class="size__max">найти эти рестораны!</span></b></span>
-        <p>
-          <div class="relative"><span class="font-size_b">Просто и быстро найди рестораны, суши-бары,
-            <br>закусочные в твоем городе, предоставляющие
-            <br><span class="size__max_b">СКИДКИ</span> на cвою продукцию!</span>
-            <div class="sale"><img src="https://v1.iconsearch.ru/uploads/icons/woothemes/128x128/sale.png" class="img__sale"></div>
-          </div>  
-        </p>
+    <div class="main">
+      <div class="container-1">
+        <div class="top__left">
+          <span class="font-size">Множество ресторанов в городе
+          <br>предоставляют скидки, мы поможем вам
+          <br><b><span class="size__max">найти эти рестораны!</span></b></span>
+          <p>
+            <div class="relative"><span class="font-size_b">Просто и быстро найди рестораны, суши-бары,
+              <br>закусочные в твоем городе, предоставляющие
+              <br><span class="size__max_b">СКИДКИ</span> на cвою продукцию!</span>
+              <div class="sale"><img src="https://v1.iconsearch.ru/uploads/icons/woothemes/128x128/sale.png" class="img__sale"></div>
+            </div>  
+          </p>
+        </div>
+        <div class="top-right">
+          <div class="r">
+            <span class="font-size_c">Поиск подходящего ресторана</span>
+            <p>
+              <span class="font-size_d">С акциями на определенные блюда, 
+              <br>доставкой или возможностью 
+              <br>забронировать столик</span>
+            </p>
+            <p>
+              <input type="search" name="q" placeholder="  Укажите адрес или ваше место нахождения" class="ph_1">
+              <br><input type="search" name="q" placeholder=" Какое блюдо предпочитаете?" class="ph_2"> <input type="search" name="q" placeholder="   Доставка" class="ph_3">
+            </p>
+            <p>
+              <label class="gap"><small> С возможностью бронировать столик</small>
+               <input type="checkbox" checked="checked">
+                <span class="checkmark"></span>
+              </label>
+              <input type="button" class="button" value="Найти">
+           </p>
+         </div>
+        </div>
       </div>
-      <div class="top-right">
-        <span class="font-size_b">Поиск подходящего ресторана</span>
-        <p>
-          С акциями на определенные блюда, 
-          <br>доставкой или возможностью 
-          <br>забронировать столик
-        </p>
-        <p>
-          <input type="search" name="q" placeholder="укажите адрес или ваше место нахождения" class="ph_1">
-          <br><input type="search" name="q" placeholder="Какое блюдо предпочитаете?" class="ph_2"> <input type="search" name="q" placeholder="Доставка" class="ph_3">
-        </p>
-        <p>
-          <label class="gap"><small> С возможностью бронировать столик</small>
-            <input type="checkbox" checked="checked">
-            <span class="checkmark"></span>
-          </label>
-          <input type="button" class="button" value="Найти">
-        </p>
-      </div>
-    </div>
-    <p>
-      <span class="size_max">Всего три действия!</span>
-    </p>
-    <div class="container-2">
-      <div class="search">
-       <span class="font-size">1. Поиск ресторана</span>
-       <div class="img-rest"><div class="med-1"></div><div class="med-2"></div></div>
       <p>
-        Ресторан рядом с вами или в вашем <br>городе
+        <span class="size3">Всего три действия!</span>
       </p>
-      </div>
-      <div class="menu">
-        <span class="font-size">2. Выбор меню</span>
-        <div class="img-menu"><div class="med-1"></div><div class="med-2"></div></div>
-        <p>
-          Выберите блюдо со скидкой <br>в ресторанах города
-        </p>
-      </div>
-      <div class="enjoy">
-        <span class="font-szie">3. Наслаждайтесь!</span>
-        <div class="img-enjoy"><div class="med-1"></div><div class="med-2"></div></div>
-        <p>
-          Доставка заказа или бесплтно <br>забронированный столик для вас
-        </p>
-      </div>
-    </div>
-    <footer>
-      <span class="size-max">Наши партнеры</span>
-      <div class="container-3">
+      <div class="container-2">
+        <div class="search">
+          <span class="font-container2">1. Поиск ресторана</span>
+          <div class="img-rest"><div class="med-11"></div><div class="med-22"></div></div>
+          <p class="p-rest">
+            Ресторан рядом с вами или в вашем <br>городе
+          </p>
+        </div>
+        <div class="menu">
+          <span class="font-container2">2. Выбор меню</span>
+          <div class="img-menu"><div class="med-1"></div><div class="med-2"></div></div>
+            <p class="p-menu">
+             Выберите блюдо со скидкой <br>в ресторанах города
+            </p>
+        </div>
 
+        <div class="enjoy">
+          <span class="font-container2">3. Наслаждайтесь!</span>
+          <div class="img-enjoy"><div class="med-1"></div><div class="med-2"></div></div>
+          <p class="p-enjoy">
+            Доставка заказа или бесплтно <br>забронированный столик для вас
+          </p>
+        </div>
       </div>
-    </footer>
-  
+      <footer>
+        <div class="bottom">
+          <span class="font-bot">Наши партнеры</span>
+          <div class="container-3">
+            <div class="img-l1"></div><div class="img-l2"></div><div class="img-l3"></div><div class="img-l4"></div><div class="img-l5"></div>
+          </div>
+          <div class="container-4">
+            <div class="mini__con1">
+              <div class="micro-con1">
+                <span class="font__end">Рестораны</span>
+                <span class="font__end">Доставка</span>
+                <span class="font__end"> Рейтинг</span>
+                <span class="font__end">О нас</span>
+                <span class="font__end">Контакты</span>
+             </div>
+             <div class="micro-con2">
+              <span class="font-sale">Easy eat - <small>скидки в ресторанах твоего города!</small></span>
+             </div>
+          </div>
+          <div class="mini__con2">
+            <div class="micro-con3">
+              <span class="number">+7 937 207 66 83</span>
+              <span class="mail">easyeat@gmail.com</span>
+            </div>
+            <div class="micro-con3">
+              <span class="number">+7 927 004 32 22</span> 
+              <span class="mail">easyeat@gmail.com</span>
+            </div>
+          </div>
+          </div>
+        </div>
+      </footer>
+    </div>
   </div>
 </body>
 </html>
